k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw28
  labels:
    app: hw28-backend
