k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw28-backend-service
  namespace: hw28

spec:
  selector:
    app: hw28-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
