k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw28-backend-ingress
  namespace: hw28

  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: app.seglianik.devops12.test-danit.com
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx

  rules:
    - host: app.seglianik.devops12.test-danit.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: hw28-backend-service

                port:
                  number: 80
